--- a/css/shoppingcart.css
+++ b/css/shoppingcart.css
@@ -1,9 +1,12 @@
 main {
-  margin: 40px auto;
+  margin: 10px auto;
 }
 
 .bottom-cta {
   display: flex;
   justify-content: space-around;
   margin-top: 50px;
+}
+.h1 {
+  margin-bottom: 50px;
 }
