--- a/css/styles.css
+++ b/css/styles.css
@@ -5,11 +5,12 @@
 body {
   margin: 0;
 }
+
 main {
   max-width: 1400px;
-  margin: 0 auto;
-  min-height: 100vh;
   padding: 0px 15px;
+  min-height: 100vh;
+  margin: 0 auto;
 }
 
 header,
@@ -30,6 +31,7 @@ footer {
   padding: 20px 0px;
   font-size: 1.2em;
   max-height: 66px;
+  width: 100%;
 }
 /*header*/
 header {
@@ -142,10 +144,13 @@ nav a {
   display: flex;
   gap: 5em;
 }
-form p {
-  margin: 10px 0px;
-  font-size: 1.1em;
+
+.form-div {
+  display: flex;
+  align-content: flex-end;
+  gap: 10px;
 }
+
 form p,
 select,
 .bold-text {
@@ -167,43 +172,66 @@ select {
   background-color: #fff;
   border: solid 2px var(--color-header__footer);
 }
+
+/* Shoppingcart  */
+
 .shoppingcart-content {
-  max-width: 400px;
+  margin: 0 auto;
+  max-width: 500px;
   padding: 17px 17px 0px 17px;
 }
 
-.remove,
-.cost-info {
-  display: flex;
+.shoppingcart-content__product {
 }
-
 .shoppingcart-content__product h2 {
-  margin-bottom: 0px;
+  margin: 9px 0px 0px 0px;
   color: black;
 }
 .shoppingcart-content__product h2,
 .shoppingcart-content__product p {
   text-transform: uppercase;
-  font-size: 0.9em;
-  margin-top: 0px;
-}
-.shoppingcart-content__product h2,
-.shoppingcart-content__product p,
-.shipment-info p,
-.remove {
   font-weight: bold;
+  font-size: 0.85em;
 }
-.remove {
-  color: var(--color-header__footer);
-  gap: 30px;
-  margin-top: 15px;
-  text-transform: capitalize;
+
+.shoppingcart-content__product p {
+  margin: 0px;
 }
-.remove i {
-  font-size: 1.6em;
-  margin-top: 17px;
+.cart-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+.cart-item img {
+  max-height: 40px;
+  max-width: 40px;
+  margin-top: 8px;
+}
+
+.cart-item .cta {
+  max-height: 30px;
+}
+.cart-item_content {
+  min-width: 200px;
+  display: flex;
+  gap: 20px;
+}
+
+.cart-item .delete-btn {
+  min-width: 80px;
+  text-align: center;
+}
+.delete-btn {
+  background-color: rgb(129, 41, 41);
+  border: rgb(161, 0, 0);
+  border-radius: 50px;
+}
+.shipment-info {
+  margin-top: 50px;
 }
 .shipment-info p {
+  font-weight: bold;
   margin-top: 0px;
   text-decoration: underline;
 }
@@ -214,6 +242,7 @@ select {
   background-color: rgb(248, 247, 247);
 }
 .cost-info {
+  display: flex;
   justify-content: space-between;
   height: 40px;
   padding-bottom: 3px;
