--- a/css/styles.css
+++ b/css/styles.css
@@ -94,6 +94,23 @@ nav a {
   position: absolute;
   right: 2%;
   top: 1em;
+  z-index: 50;
+}
+.cart-symbol {
+  z-index: 10;
+}
+.cart-amount {
+  color: var(--color-header__footer);
+  border: solid 2px var(--color-header__footer);
+  background-color: var(--secondary-color);
+  border-radius: 50%;
+  max-width: 18px;
+  max-height: 25px;
+  position: relative;
+  top: -48px;
+  left: 7px;
+  font-weight: bold;
+  font-family: var(--font-paragraph);
 }
 
 .social-media {
