--- a/css/about.css
+++ b/css/about.css
@@ -7,16 +7,17 @@
   max-width: 600px;
   margin: 50px auto;
   padding: 10px;
-  animation: about__content 1s forwards;
-  border: solid 2px var(--color-header__footer);
+  animation: about__content 5s forwards;
+  box-shadow: 0px 2px 3px 2px #d9d8e3;
   opacity: 0;
+  background-color: #d9d8e3;
 }
 @keyframes about__content {
   0% {
     opacity: 0;
   }
   50% {
-    opacity: 0.5;
+    opacity: 0.8;
   }
   100% {
     opacity: 1;
