--- a/css/checkout.css
+++ b/css/checkout.css
@@ -1,8 +1,9 @@
 main {
-  margin: 40px auto;
+  margin: 0px auto;
 }
 h1 {
   text-align: center;
+  margin-bottom: 40px;
 }
 .checkout,
 .form-wrapper > * {
@@ -54,14 +55,4 @@ h1 {
   position: absolute;
   top: -410px;
   left: 21px;
-}
-
-.form-error {
-  color: #ab051e;
-  font-family: var(--font-paragraph);
-  font-size: 0.8em;
-  text-decoration: underline;
-  margin-top: 10px;
-  display: none;
-  max-height: 15px;
 }
