--- a/css/contact.css
+++ b/css/contact.css
@@ -59,5 +59,9 @@ textarea {
 }
 .contact-info__content i {
   font-size: 1.4em;
-  margin: 16px 8px 0px 0px;
+  margin: 9px 8px 0px 0px;
+}
+
+.form-error {
+  margin-top: 0px;
 }
