--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,9 @@
 .intro {
-  margin-top: 40px;
-  position: relative;
+  margin: auto;
+  max-width: 1400px;
   background: url(../images/free-shipping.jpg) left center no-repeat;
   background-size: cover;
-  min-height: 40vh;
+  min-height: 40;
 }
 .intro_content-container {
   background-color: var(--quaternary-color);
@@ -42,9 +42,8 @@
   justify-content: center;
   text-align: left;
   box-shadow: 0px 2px 5px 2px rgba(34, 34, 34, 0.775);
-  background: #0d324d;
-  max-width: 300px;
-  margin: 50px auto;
+  background: var(--color-header__footer);
+  max-width: 270px;
 }
 .waterproof_container img {
   height: 200px;
