--- a/css/media.css
+++ b/css/media.css
@@ -1,16 +1,18 @@
 @media (min-width: 600px) {
   p,
-  li {
+  li,
+  label {
     font-size: 0.85em;
   }
 
   /* homepage */
   .home-featured {
-    margin: 30px 0px;
+    margin: 30px auto;
     display: flex;
     justify-content: space-around;
     max-width: 1400px;
   }
+
   .waterproof {
     margin-top: 20px;
   }
@@ -20,6 +22,17 @@
   .form__checkout {
     top: -25em;
   }
+  /* details page  */
+  .product-specific {
+    flex-direction: row;
+    gap: 100px;
+    padding: 40px 30px 30px 30px;
+  }
+
+  .product-specific h1 {
+    margin-top: -5px;
+    font-weight: bold;
+  }
 }
 @media (min-width: 800px) {
   h1,
@@ -27,23 +40,37 @@
     font-size: 1.4em;
     font-weight: normal;
   }
+  main {
+    padding: 0px;
+  }
 
   /* header  */
+  header {
+    margin-bottom: 0px;
+  }
+  .header-top_container,
+  .header-bottom {
+    max-width: 1400px;
+  }
 
   .header-bottom {
-    position: relative;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: center;
     padding: 13px;
-    background-color: var(--secondary-color);
+    background-color: #d9d8e3;
+    display: flex;
+    justify-content: center;
   }
 
-  .shopping-cart i {
-    color: var(--color-header__footer);
-    position: relative;
-    bottom: 3px;
+  .hamburger-btn {
+    display: none;
   }
+  .shopping-cart {
+    position: static;
+    color: var(--color-header__footer);
+  }
+  .shopping-cart a {
+    color: var(--color-header__footer);
+  }
+
   .logo-header {
     position: absolute;
     left: 50%;
@@ -51,6 +78,7 @@
   }
 
   nav {
+    flex: 1;
     display: block;
     position: static;
     border-bottom: none;
@@ -67,14 +95,11 @@
     position: static;
     background: none;
     transform: translateX(0);
-    justify-content: left;
-    color: var(--seconday-color);
+    margin: 0;
   }
-  .social-media i {
-    color: var(--seconday-color);
-  }
-  .shopping-cart {
-    right: 1em;
+  .social-media i,
+  .social-media h2 {
+    color: var(--secondary-color);
   }
 
   .hamburger-menu {
@@ -93,6 +118,7 @@
     background-image: url(../../images/free-shipping-big.jpg);
     background-position-y: center;
     min-height: 60vh;
+    background-size: cover;
   }
   .intro_content {
     max-width: 300px;
@@ -100,19 +126,8 @@
 
   .products {
     grid-template-columns: repeat(2, 1fr);
-    gap: 150px;
   }
   /* detais page  */
-  .product-specific {
-    flex-direction: row;
-    gap: 100px;
-    padding: 40px 30px 30px 30px;
-  }
-
-  .product-specific h1 {
-    margin-top: -5px;
-    font-weight: bold;
-  }
 
   .cart {
     top: 30%;
@@ -126,7 +141,7 @@
     max-width: 500px;
     margin: 0;
   }
-  .checkout .cta {
+  .checkout .cta-form {
     margin-top: 20px;
   }
 
@@ -137,6 +152,7 @@
     display: flex;
     flex-direction: row-reverse;
     max-width: 1200px;
+    align-items: center;
   }
   .contact > * {
     flex: 1;
@@ -148,36 +164,49 @@
   .contact-info__content {
     margin-bottom: 38px;
   }
+  /* shopping cart page  */
+  .bottom-cta {
+    justify-content: space-around;
+  }
+  /* contact page  */
+  .contact-info__content i {
+    margin-top: 13px;
+  }
 }
 @media (min-width: 1010px) {
   /* home page    */
+  .intro {
+    background-size: contain;
+  }
   .featured {
     margin: auto;
   }
   .home-featured {
-    margin: 30px 0px;
-    display: flex;
     justify-content: space-between;
     max-width: 1400px;
     align-items: center;
+  }
+  .waterproof {
+    min-width: 700px;
   }
 
   .waterproof_container {
     flex-direction: row;
     align-items: center;
-    max-width: 750px;
+    max-width: 620px;
     gap: 30px;
     padding: 30px 10px;
+    margin-top: 20px;
   }
+
   .waterproof img {
     height: 250px;
     width: 300px;
-    margin-top: 30px;
     padding-left: 45px;
   }
 
   .products {
     grid-template-columns: repeat(3, 1fr);
-    gap: 200px;
+    gap: 100px;
   }
 }
