--- a/css/shoppingcart.css
+++ b/css/shoppingcart.css
@@ -1,11 +1,8 @@
-main {
-  margin: 10px auto;
-}
-
 .bottom-cta {
   display: flex;
-  justify-content: space-around;
-  margin-top: 50px;
+  justify-content: space-between;
+  max-width: 800px;
+  margin: 50px auto;
 }
 .h1 {
   margin-bottom: 50px;
@@ -23,4 +20,8 @@ main {
 #msg_h2 {
   font-size: 1.1em;
   margin-bottom: 10px;
+}
+
+.shipment-info {
+  margin-top: 20px;
 }
