--- a/css/index.css
+++ b/css/index.css
@@ -35,7 +35,8 @@
 .featured .product-container {
   margin: 0 auto;
 }
-
+.waterproof {
+}
 .waterproof_container {
   display: flex;
   flex-direction: column;
@@ -44,6 +45,7 @@
   box-shadow: 0px 2px 5px 2px rgba(34, 34, 34, 0.775);
   background: var(--color-header__footer);
   max-width: 270px;
+  margin: auto;
 }
 .waterproof_container img {
   height: 200px;
