--- a/css/media.css
+++ b/css/media.css
@@ -96,6 +96,7 @@
     background: none;
     transform: translateX(0);
     margin: 0;
+    border-top: 0;
   }
   .social-media i,
   .social-media h2 {
@@ -164,10 +165,7 @@
   .contact-info__content {
     margin-bottom: 38px;
   }
-  /* shopping cart page  */
-  .bottom-cta {
-    justify-content: space-around;
-  }
+
   /* contact page  */
   .contact-info__content i {
     margin-top: 13px;
