--- a/css/shoppingcart.css
+++ b/css/shoppingcart.css
@@ -1,6 +1,6 @@
 .bottom-cta {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   max-width: 800px;
   margin: 50px auto;
 }
