--- a/css/contact.css
+++ b/css/contact.css
@@ -65,3 +65,23 @@ textarea {
 .form-error {
   margin-top: 0px;
 }
+
+.cart {
+  display: none;
+}
+
+.cart {
+  position: fixed;
+  top: 40%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 380px;
+  height: 200px;
+  text-align: center;
+  align-content: center;
+  padding: 0px 40px;
+}
+
+.cart h2 {
+  margin-top: 45px;
+}
